--- a/system-apps/app-generator/webClient/src/app/pages/create/create.component.html
+++ b/system-apps/app-generator/webClient/src/app/pages/create/create.component.html
@@ -52,12 +52,12 @@
       </ibm-label>
       <ibm-tile-group
         class="tile-group"
-        (selected)="frameworkSelect($event.value)"
-	[multiple]="false">
+        (selected)="onFrameworkSelect($event.value)"
+        [multiple]="false">
         <ibm-selection-tile
           *ngFor="let framework of frameworks"
           [value]="framework.value"
-	  [selected]="framework.selected">
+          [selected]="framework.selected">
           <div class="tile-header">{{framework.value}}</div>
           <div class="tile-body">{{framework.desc}}</div>
         </ibm-selection-tile>
@@ -66,7 +66,7 @@
       <div
         *ngIf="isIframe"
         class="tile-group"
-	style="display:block;">
+        style="display:block; margin-top:0.5rem;">
         <div class="tile-header">
           iFrame specific
         </div>
@@ -85,23 +85,29 @@
           [(ngModel)]="pluginConfig.webContent.startingPage">
       </ibm-label>
 
-      <div *ngIf="templates">
-        <ibm-label
-          class="item-label">
-          Template
-        </ibm-label>
-        <ibm-tile-group
-          class="tile-group"
-          (selected)="templateSelect($event.value)"
-	  [multiple]="false">
-          <ibm-selection-tile
-            *ngFor="let template of templates"
-            [value]="template.value"
-	    [selected]="template.selected">
-            <div class="tile-header">{{template.value}}</div>
-            <div class="tile-body">{{template.desc}}</div>
-          </ibm-selection-tile>
-        </ibm-tile-group>
+      <div
+        *ngIf="templates"
+        style="margin-top:0.5rem;">
+        <div style="display:flex;flex-direction:row;">
+          <ibm-dropdown
+            label="Template"
+            placeholder="Select Template">
+            <ibm-dropdown-list
+              [items]="templates"
+              (select)="onTemplateSelect($event)">
+            </ibm-dropdown-list>
+          </ibm-dropdown>
+	  <div
+            class="tile-group"
+            style="display:block;margin-top:1.5rem;margin-left:2rem;">
+            <div class="tile-header">
+              {{pluginConfig.template}}
+            </div>
+            <div class="tile-body">
+              {{selectedTemplateDescription}}
+            </div>
+          </div>
+	</div>
       </div>
 
       <ibm-label
@@ -113,11 +119,21 @@
           [(ngModel)]="pluginConfig.pluginVersion">
       </ibm-label>
 
-<!--
-      <ibm-number
-        [(ngModel)]="pluginConfig.webContent.defaultWindowStyle.width">
-      </ibm-number>
--->
+      <div style="display:flex; flex-direction:row;">
+        <div style="margin-right:0.25rem;">
+          <div class="custom-label">Default Window Width (px)</div>
+          <ibm-number
+            [(ngModel)]="pluginConfig.webContent.defaultWindowStyle.width">
+          </ibm-number>
+        </div>
+
+        <div style="margin-left:0.25rem;">
+          <div class="custom-label">Default Window Height (px)</div>
+          <ibm-number
+            [(ngModel)]="pluginConfig.webContent.defaultWindowStyle.height">
+          </ibm-number>
+        </div>
+      </div>
 
       <ibm-label
         class="item-label">
@@ -146,7 +162,8 @@
           theme="light"
           [rows]="25"
           [cols]="45"
-          aria-label="preview">{{pluginText}}
+          aria-label="preview">
+          {{pluginText}}
         </textarea>
       </ibm-label>
     </div>
