Broken file uploader

--- a/system-apps/app-generator/webClient/src/app/pages/create/create.component.html
+++ b/system-apps/app-generator/webClient/src/app/pages/create/create.component.html
@@ -135,6 +135,13 @@
         </div>
       </div>
 
+      <app-drop-file-uploader
+        title="My title"
+        description="My description"
+        dropText="Drop file here"
+        drop="true">
+      </app-drop-file-uploader>
+
       <ibm-label
         class="item-label">
         Author
