--- a/virtual-desktop/src/styles.css
+++ b/virtual-desktop/src/styles.css
@@ -109,6 +109,12 @@
   color: white;
 }
 
+.personalization-snackbar {
+  background-color: black;
+  color: white;
+  opacity: .9 !important;
+}
+
 /*
   This program and the accompanying materials are
   made available under the terms of the Eclipse Public License v2.0 which accompanies
