--- a/system-apps/system-settings-preferences/webClient/src/app/language/language.component.html
+++ b/system-apps/system-settings-preferences/webClient/src/app/language/language.component.html
@@ -10,17 +10,50 @@
 <div class="language-main-window">
   <div class="language-content-left">
       <img class="language-icon" alt=""><hr class="language-separator-hor">
-      <button class="language-button" (click)="selectEnglish()" title="{{Select}}">English</button><hr class="language-separator-hor">
-      <button class="language-button" (click)="selectChinese()" title="{{Select}}">中文</button><hr class="language-separator-hor">
-      <button class="language-button" (click)="selectFrench()" title="{{Select}}">Français</button><hr class="language-separator-hor">
-      <button class="language-button" (click)="selectJapanese()" title="{{Select}}">日本語</button><hr class="language-separator-hor">
-      <button class="language-button" (click)="selectRussian()" title="{{Select}}">Pусский</button><hr class="language-separator-hor">
-      <button class="language-button" (click)="selectGerman()" title="{{Select}}">Deutsch</button><hr class="language-separator-hor">
+      <button 
+        class="language-button" 
+        (click)="selectEnglish()" 
+        title="{{Select}}"
+        id="ZAP_Languages_SelectEnglish">English</button>
+      <hr class="language-separator-hor">
+      <button 
+        class="language-button" 
+        (click)="selectChinese()" 
+        title="{{Select}}"
+        id="ZAP_Languages_SelectChinese">中文</button>
+      <hr class="language-separator-hor">
+      <button 
+        class="language-button" 
+        (click)="selectFrench()" 
+        title="{{Select}}"
+        id="ZAP_Languages_SelectFrench">Français</button>
+      <hr class="language-separator-hor">
+      <button 
+        class="language-button" 
+        (click)="selectJapanese()" 
+        title="{{Select}}"
+        id="ZAP_Languages_SelectJapanese">日本語</button>
+      <hr class="language-separator-hor">
+      <button 
+        class="language-button" 
+        (click)="selectRussian()" 
+        title="{{Select}}"
+        id="ZAP_Languages_SelectRussian">Pусский</button>
+      <hr class="language-separator-hor">
+      <button 
+        class="language-button" 
+        (click)="selectGerman()" 
+        title="{{Select}}"
+        id="ZAP_Languages_SelectGerman">Deutsch</button>
+      <hr class="language-separator-hor">
   </div>
   <div class="language-content-right">
     
-    <label class="language-label"> {{LanguageSelected}}: {{selectedLanguage}}</label>
-    <button type="submit" class="language-submit" (click)="applyLanguage()">{{Apply}}</button>
+    <label class="language-label" id="ZAP_Languages_SelectedLabel"> {{LanguageSelected}}: {{selectedLanguage}}</label>
+    <button type="submit" 
+      class="language-submit" 
+      (click)="applyLanguage()"
+      id="ZAP_Languages_ApplyButton">{{Apply}}</button>
   </div>
 </div>
 
