--- a/virtual-desktop/src/app/window-manager/mvd-window-manager/launchbar/launchbar-widget/launchbar-widget.component.html
+++ b/virtual-desktop/src/app/window-manager/mvd-window-manager/launchbar/launchbar-widget/launchbar-widget.component.html
@@ -12,16 +12,17 @@
      [style.background]="color.launchbarMenuColor"
      [style.bottom]="popupBottom"
      [style.color]="color.launchbarMenuText">
-  <h5 class="launchbar-username">{{getUsername()}}</h5>
-  <button #logoutbutton class="btn btn-primary launchbar-button" (click)="logout()"
+  <h5 class="launchbar-username" id="ZAP_DesktopHome_UsernameLabel">{{getUsername()}}</h5>
+  <button #logoutbutton class="btn btn-primary launchbar-button" (click)="logout()" id="ZAP_DesktopHome_LogoutButton"
     i18n="signout button|Title of Sign out button@@signout-button-title">Log out</button>
-  <h6 class="launchbar-plugin-version" [style.color]="color.launchbarMenuText">{{getPluginVersion()}}</h6>
+  <h6 class="launchbar-plugin-version" [style.color]="color.launchbarMenuText" id="ZAP_DesktopHome_VersionLabel">{{getPluginVersion()}}</h6>
 </div>
 
 <div #notificationarea [hidden]="!notificationsVisible" class='notifications'
      [style.bottom]="popupBottom"
      [style.background]="color.launchbarMenuColor"
-     [style.color]="color.launchbarMenuText">
+     [style.color]="color.launchbarMenuText"
+     id="ZAP_DesktopHome_NotificationsPanel">
   <div [hidden]="notifications.length > 0" class="no-notifications">{{NoNotifications}}</div>
   <div class="notification-item" *ngFor="let item of notifications; let i = index" [attr.data-index]="i">
       <div class="outer-container" (click)="focusApplication(i)">
@@ -29,10 +30,14 @@
             <img class="notification-icon" [src]="info[i].imgSrc" alt="">
           </div>
           <div class="notification-content">
-            <div class="notification-title">{{item['notification'].title}}</div>
-            <div class="notification-message">{{item['notification'].message}}</div>
+            <div class="notification-title" id="ZAP_DesktopHome_NotificationsTitle">{{item['notification'].title}}</div>
+            <div class="notification-message" id="ZAP_DesktopHome_NotificationsMessage">{{item['notification'].message}}</div>
           </div>
-          <img class="delete-notification" (click)="deleteNotification(item);$event.stopPropagation()" [src]="closeImage" alt="Delete notification">
+          <img class="delete-notification" 
+            (click)="deleteNotification(item);$event.stopPropagation()" 
+            [src]="closeImage" 
+            alt="Delete notification"
+            id="ZAP_DesktopHome_NotificationsDelete">
           <div class="time-container">
             <div class="time">{{item.recievedDate.toLocaleTimeString()}}</div>
             <div class="timeAgo">{{timeSince[i]}}</div>
@@ -45,11 +50,12 @@
 <div class="widget-area"
      [style.min-width]="areaSize"
      [style.background]="color.launchbarColor"
-     [style.border-radius]="borderRadius">
-  <div class="clock two-row" *ngIf="clockTwoRow" [style.font-size]="fontSize" [style.padding-top]="clockOffset">
-    <span>{{date | date:'shortTime'}}</span>
+     [style.border-radius]="borderRadius"
+     id="ZAP_DesktopHome_WidgetArea">
+  <div class="clock two-row" *ngIf="clockTwoRow" [style.font-size]="fontSize" [style.padding-top]="clockOffset" id="ZAP_DesktopHome_LaunchbarClock">
+    <span id="ZAP_DesktopHome_TimeLabel">{{date | date:'shortTime'}}</span>
     <br>
-    <span>{{date | date:'shortDate'}}</span>
+    <span id="ZAP_DesktopHome_DateLabel">{{date | date:'shortDate'}}</span>
   </div>
   <div class="clock" *ngIf="!clockTwoRow" [style.font-size]="fontSize" [style.padding-top]="clockOffset">
     <span>{{date | date:'shortDate'}} {{date | date:'shortTime'}}</span>
@@ -59,7 +65,8 @@
        [style.background-size]="widgetSize+' '+widgetSize"
        [style.height]="widgetSize"
        [style.width]="widgetSize"
-       (click)="toggleNotifications()">
+       (click)="toggleNotifications()"
+       id="ZAP_DesktopHome_NotificationsIcon">
       <div 
         [hidden]="notifications.length == 0"
         class="launchbar-tray-indicator"
@@ -75,13 +82,15 @@
        [style.background-size]="widgetSize+' '+widgetSize"
        [style.height]="widgetSize"
        [style.width]="widgetSize"
-       (click)="togglePersonalizationPanel()"></div>
+       (click)="togglePersonalizationPanel()"
+       id="ZAP_DesktopHome_SettingsIcon"></div>
   <div #usericon class="launchbar-tray-icon user"
        [style.margin-top]="widgetOffset"
        [style.height]="widgetSize"
        [style.width]="widgetSize"
        [style.background-size]="widgetSize+' '+widgetSize"
-       (click)="togglePopup()"></div>
+       (click)="togglePopup()"
+       id="ZAP_DesktopHome_UserIcon"></div>
 </div>
 
 <!--
