--- a/virtual-desktop/src/app/window-manager/mvd-window-manager/window-pane/window-pane.component.html
+++ b/virtual-desktop/src/app/window-manager/mvd-window-manager/window-pane/window-pane.component.html
@@ -10,7 +10,7 @@
   Copyright Contributors to the Zowe Project.
 -->
 
-<div class="window-pane" [ngStyle]="wallpaper">
+<div class="window-pane" [ngStyle]="wallpaper" id="ZAP_DesktopHome_Wallpaper">
   <div *ngFor="let window of windows">
     <rs-com-mvd-window [desktopWindow]="window" [theme]="theme"></rs-com-mvd-window>
   </div>
