Added ID for context menu
Signed-off-by: Leanid Astrakou <lastrakou@rocketsoftware.com>

--- a/virtual-desktop/src/app/context-menu/context-menu.component.html
+++ b/virtual-desktop/src/app/context-menu/context-menu.component.html
@@ -17,6 +17,7 @@
   [style.top.px]='this.newY'
   [class.propagateChildLeft]="this._propagateChildLeft"
   [class.navigable]='this.isNavigable'
+  id="ZAP_ContextMenu_Panel"
 >
   <ul>
     <ng-container *ngFor='let menuItem of menuItems; let i = index;'>
