Add disable minimize handle code to prepare for single app mode
Signed-off-by: Leanid Astrakou <lastrakou@rocketsoftware.com>

--- a/virtual-desktop/src/app/window-manager/mvd-window-manager/window/window.component.html
+++ b/virtual-desktop/src/app/window-manager/mvd-window-manager/window/window.component.html
@@ -66,7 +66,8 @@
       [style.background-size]="buttonSize"
       [style.left]="minimizeLeft"
       [ngStyle]="hasFocus() ? {'filter': buttonFilter} : {}"
-      (click)="minimizeToggle()"></div>
+      (click)="minimizeToggle()"
+      [style.display]="displayMinimize"></div>
     <div class="maximize-button" 
       [style.top]="buttonTop"
       [class.active]="hasFocus()"
