--- a/virtual-desktop/src/app/authentication-manager/login/login.component.html
+++ b/virtual-desktop/src/app/authentication-manager/login/login.component.html
@@ -67,7 +67,7 @@
 </div>
 
 <!-- sometimes we may not be able to tell if the user is idle or not, so ask them directly with a popup -->
-<zlux-popup-manager>
+<zlux-popup-manager *ngIf="enableSessionTimeoutPopup">
 </zlux-popup-manager>
 
 <!--
