Styling the error messages
Signed-off-by: Sakshi Bobade <bobadesakshi21@gmail.com>

--- a/virtual-desktop/src/app/authentication-manager/login/login.component.css
+++ b/virtual-desktop/src/app/authentication-manager/login/login.component.css
@@ -170,7 +170,7 @@
   font-size: 9pt;
   border-color: Transparent;
   border: none;
-  text-align: justify;
+  text-align: center;
   outline: none;
   overflow: auto;
 }
