--- a/virtual-desktop/src/app/window-manager/mvd-window-manager/personalization-panel/personalization/personalization.component.html
+++ b/virtual-desktop/src/app/window-manager/mvd-window-manager/personalization-panel/personalization/personalization.component.html
@@ -20,7 +20,7 @@
 
   <label class="personalization-label" style="padding-top: 10px;">{{Background}}</label>
 
-  <file-drop 
+  <ngx-file-drop 
     id="ZAP_Personalization_FileDrop"
     (onFileDrop)="fileDrop($event)" 
     multiple="false"
@@ -28,8 +28,8 @@
     [showBrowseBtn]="true"
     browseBtnLabel="{{Upload}}"
     >   <!-- Full string says "Drag wallpaper here or [button]upload. -->
-        <div style="color: white !important;">{{DragWallpaperHereOr}}&nbsp;</div> 
-    </file-drop>
+      <div style="color: white !important;">{{DragWallpaperHereOr}}&nbsp;</div> 
+  </ngx-file-drop>
 
   <label class="personalization-label">{{Color}}</label>
   <div class="personalization-color-1" id="ZAP_Personalization_ColorCircleGroup"> <!-- Color circle group -->
