--- a/virtual-desktop/src/app/window-manager/mvd-window-manager/personalization-panel/personalization/personalization.component.html
+++ b/virtual-desktop/src/app/window-manager/mvd-window-manager/personalization-panel/personalization/personalization.component.html
@@ -19,16 +19,14 @@
   </label>
 
   <label class="personalization-label" style="padding-top: 10px;">{{Background}}</label>
-
+  <div class="personalization-text" style="margin-left: -15px;">{{DragWallpaperHereOr}}</div>
   <ngx-file-drop 
     id="ZAP_Personalization_FileDrop"
     (onFileDrop)="fileDrop($event)" 
     multiple="false"
     style="color: white !important;"
     [showBrowseBtn]="true"
-    browseBtnLabel="{{Upload}}"
-    >   <!-- Full string says "Drag wallpaper here or [button]upload. -->
-      <div style="color: white !important;">{{DragWallpaperHereOr}}&nbsp;</div> 
+    browseBtnLabel="{{Upload}}">
   </ngx-file-drop>
 
   <label class="personalization-label">{{Color}}</label>
