--- a/virtual-desktop/src/app/window-manager/mvd-window-manager/launchbar/shared/snackbar/snackbar.component.html
+++ b/virtual-desktop/src/app/window-manager/mvd-window-manager/launchbar/shared/snackbar/snackbar.component.html
@@ -20,7 +20,7 @@
           </div>
       </div>
       <div class="snackbar-dismiss text-left">
-          <button class="snackbar-dismiss-button" (click)="snackBarRef.dismissWithAction()">{{this.translation.translate("Dismiss")}}</button>
+          <button class="snackbar-dismiss-button" (click)="snackBarRef.dismissWithAction()" i18n="label|label for dismiss button@@dismiss-button-label">Dismiss</button>
       </div>
   </div>
 </div>
