--- a/system-apps/system-settings-preferences/webClient/src/app/app.component.html
+++ b/system-apps/system-settings-preferences/webClient/src/app/app.component.html
@@ -11,7 +11,7 @@
 <!-- Here is where module switching code will go. After more Settings options become available, 
      the desired component will display based on what the user chose in the Personalization panel. -->
      
-<language-component *ngIf="activeComponent == this.translation.translate('Languages')"></language-component>
+<language-component *ngIf="isLanguagesComponentActive"></language-component>
 
 <!-- 
   This program and the accompanying materials are
