--- a/system-apps/app-generator/templates/iframe/Basic/web/html/index.html
+++ b/system-apps/app-generator/templates/iframe/Basic/web/html/index.html
@@ -6,11 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../css/iframe.css">
     <script type="text/javascript" src="/ZLUX/plugins/org.zowe.zlux.bootstrap/web/adapter-init.js"></script>
-    <script type="text/javascript" src="/ui/v1/zlux/ZLUX/plugins/org.zowe.zlux.bootstrap/web/adapter-init.js"></script>
+    <script type="text/javascript" src="/zlux/ui/v1/ZLUX/plugins/org.zowe.zlux.bootstrap/web/adapter-init.js"></script>
     <script type="text/javascript" src="/lib/org.zowe.zlux.logger/0.9.0/logger.js"></script>
-    <script type="text/javascript" src="/ui/v1/zlux/lib/org.zowe.zlux.logger/0.9.0/logger.js"></script>
+    <script type="text/javascript" src="/zlux/ui/v1/lib/org.zowe.zlux.logger/0.9.0/logger.js"></script>
     <script type="text/javascript" src="/ZLUX/plugins/org.zowe.zlux.bootstrap/web/iframe-adapter.js"></script>
-    <script type="text/javascript" src="/ui/v1/zlux/ZLUX/plugins/org.zowe.zlux.bootstrap/web/iframe-adapter.js"></script>
+    <script type="text/javascript" src="/zlux/ui/v1/ZLUX/plugins/org.zowe.zlux.bootstrap/web/iframe-adapter.js"></script>
     <script type="text/javascript" src="../js/main.js"></script>
   </head>
   <body class="iframe-font" onload="ready(this)">
