--- a/virtual-desktop/src/app/authentication-manager/login/login.component.html
+++ b/virtual-desktop/src/app/authentication-manager/login/login.component.html
@@ -19,37 +19,37 @@
       <button class="back-button" 
         [hidden]="!changePassword && !expiredPassword" 
         (click)="backButton()"
-        id="ZAP_LoginPage_BackButton">{{this.translation.translate("Back")}}</button>
+        id="ZAP_LoginPage_BackButton">{{this.languageLocaleService.translateDesktopString("Back")}}</button>
     <div>
     <img class="logo-img" [hidden]="changePassword || expiredPassword" [src]="logo" alt="Zowe - z/OS Lightweight User Experience" />
     <img class="password-logo-img" [hidden]="!changePassword && !expiredPassword" [src]="passwordLogo" alt="Zowe - z/OS Lightweight User Experience" />
     <form class="login-form" [class.login-form-expired]="expiredPassword" [class.password-login-form]="changePassword">
-      <p class="login-message">{{loginMessage}}</p>
-      <label [hidden]="changePassword" for="userid" i18n="label|Label for username@@username-label">Username</label>
+      <p class="login-message">{{this.languageLocaleService.translateDesktopString(loginMessage)}}</p>
+      <label [hidden]="changePassword" for="userid" >{{this.languageLocaleService.translateDesktopString("Username")}}</label>
       <input 
         [hidden]="changePassword" class="userid" id="ZAP_LoginPage_Username" aria-labelledby="user id" tabindex="1" type="text" 
         name="userid" [(ngModel)]="username" minlength="1" maxlength="100" autofocus [attr.disabled]="locked?'':null" 
         (keyup)="considerSubmit($event)"/>
-      <label for="password" i18n="label|Label for password@@password-label">{{this.expiredPassword ? "Old Password" : "Password"}}</label>
+      <label for="password">{{this.expiredPassword ? this.languageLocaleService.translateDesktopString("Old Password") : this.languageLocaleService.translateDesktopString("Password")}}</label>
       <input 
         class="password" id="ZAP_LoginPage_Password" aria-labelledby="password" tabindex="1" type="password" 
         name="password"[(ngModel)]="password" maxlength="100" [attr.disabled]="locked?'':null" (keyup)="considerSubmit($event)"/>
-      <label [hidden]="!expiredPassword && !changePassword" for="newPassword" i18n="label|Label for password@@new-password-label">New Password</label>
+      <label [hidden]="!expiredPassword && !changePassword" for="newPassword">New Password</label>
       <input 
         [hidden]="!expiredPassword && !changePassword" class="newPassword" id="ZAP_LoginPage_NewPassword" aria-labelledby="newPassword" 
         tabindex="1" type="password" name="newPassword"[(ngModel)]="newPassword" maxlength="100" [attr.disabled]="locked?'':null" 
         (keyup)="considerSubmit($event)"/>
-      <label [hidden]="!expiredPassword && !changePassword" for="confirmNewPassword" i18n="label|Label for password@@confirm-new-password-label">Confirm New Password</label>
+      <label [hidden]="!expiredPassword && !changePassword" for="confirmNewPassword">Confirm New Password</label>
       <input 
         [hidden]="!expiredPassword && !changePassword" class="confirmNewPassword" id="ZAP_LoginPage_ConfirmNewPassword" 
         aria-labelledby="confirmNewPassword" tabindex="1" type="password" name="confirmNewPassword"[(ngModel)]="confirmNewPassword" 
         maxlength="100" [attr.disabled]="locked?'':null" (keyup)="considerSubmit($event)"/>
     </form>
-    <p class="login-error">{{this.translation.translate(errorMessage)}}</p>
+    <p class="login-error">{{this.languageLocaleService.translateDesktopString(errorMessage)}}</p>
     <div class="fa fa-spinner fa-spin fa-5x" [hidden]="!isLoading"></div>
     <button id="ZAP_LoginPage_SavePassword"
       [hidden]="!expiredPassword && !changePassword" class="login-button" (click)="attemptPasswordReset()" [disabled]="locked">
-            {{this.expiredPassword ? this.translation.translate("Change Password") : this.translation.translate("SavePassword")}}
+            {{this.expiredPassword ? this.languageLocaleService.translateDesktopString("Change Password") : this.languageLocaleService.translateDesktopString("SavePassword")}}
     </button>
     <div>
       <button id="ZAP_LoginPage_Login"
@@ -58,7 +58,7 @@
         [hidden]="!needLogin || expiredPassword"
         [disabled]="locked"
         i18n="label|Label for login@@login-button-title">
-        Login
+        {{this.languageLocaleService.translateDesktopString("Login")}}
       </button>
     </div>
   </div>
