updated angular and angular carbon components to support angular v12
Signed-off-by: Priyansh61 <21bec080@iiitdmj.ac.in>

--- a/system-apps/admin-notification-app/webClient/src/app/adminnotification-component.scss
+++ b/system-apps/admin-notification-app/webClient/src/app/adminnotification-component.scss
@@ -11,7 +11,7 @@
 $css--body: false;
 $css--reset: false;
 
-@import "~@rocketsoftware/carbon-components/scss/globals/scss/styles.scss";
+@import "~carbon-components/scss/globals/scss/styles.scss";
 
 .parent {
   flex-direction: column;
