--- a/virtual-desktop/src/app/authentication-manager/login/login.component.css
+++ b/virtual-desktop/src/app/authentication-manager/login/login.component.css
@@ -49,7 +49,7 @@
   height: 100%;
   top: 0;
   left: 0;
-  background: url(../../../assets/images/background.jpg) no-repeat center/cover;
+  background: url("/ZLUX/plugins/org.zowe.zlux.ng2desktop/web/assets/images/background.jpg") no-repeat center/cover;
 }
 
 .login-panel.hidden {
@@ -119,17 +119,17 @@
   display: inline-block;
   width: 76px;
   height: 76px;
-  background-image: url('../../../assets/images/login/login-btn-normal.png');
+  background-image: url('/ZLUX/plugins/org.zowe.zlux.ng2desktop/web/assets/images/login/login-btn-normal.png');
   background-position: center center;
   background-repeat: no-repeat;
 }
 
 .login-button > .login-button-icon:hover {
-  background-image: url('../../../assets/images/login/login-btn-hover.png');
+  background-image: url('/ZLUX/plugins/org.zowe.zlux.ng2desktop/web/assets/images/login/login-btn-hover.png');
 }
 
 .login-button > .login-button-icon:active {
-  background-image: url('../../../assets/images/login/login-btn-pressed.png');
+  background-image: url('/ZLUX/plugins/org.zowe.zlux.ng2desktop/web/assets/images/login/login-btn-pressed.png');
 }
 
 .login-button:disabled {
