--- a/virtual-desktop/src/app/window-manager/mvd-window-manager/personalization-panel/personalization-panel.component.css
+++ b/virtual-desktop/src/app/window-manager/mvd-window-manager/personalization-panel/personalization-panel.component.css
@@ -32,15 +32,15 @@
 }
 
 .panel-item-foreign_language{
-  background-image: url('../../../../../../system-apps/system-settings-preferences/webClient/src/assets/language_icon.png');
+  /* background-image: url('../../../../../../system-apps/system-settings-preferences/webClient/src/assets/language_icon.png'); */
 }
 
 .panel-item-personalization{
-  background-image: url('../../../../../../system-apps/system-settings-preferences/webClient/src/assets/personalization.png');
+  /* background-image: url('../../../../../../system-apps/system-settings-preferences/webClient/src/assets/personalization.png'); */
 }
 
 .panel-item-password{
-  background-image: url('../../../../assets/images/login/password-reset.png');
+  background-image: url('/ZLUX/plugins/org.zowe.zlux.ng2desktop/web/assets/images/login/password-reset.png');
   background-size: contain;
 }
 
