--- a/virtual-desktop/src/app/authentication-manager/login/login.component.html
+++ b/virtual-desktop/src/app/authentication-manager/login/login.component.html
@@ -15,7 +15,7 @@
 </div>
 
 <div class="login-panel" [class.hidden]="!isLoading && !needLogin && !changePassword">
-  <div class="login-overlay" src="'../../../assets/images/login/back-button.png'">
+  <div class="login-overlay" src="'/ZLUX/plugins/org.zowe.zlux.ng2desktop/web/assets/images/login/back-button.png'">
       <button class="back-button" 
         [hidden]="!changePassword && !expiredPassword" 
         (click)="backButton()"
