add code for basehref to resolve the internal links from css files for font and added component to load the external css files
Signed-off-by: Satish Wadkar <swadkar@rocketsoftware.com>

--- a/virtual-desktop/src/app/window-manager/mvd-window-manager/desktop/desktop.component.html
+++ b/virtual-desktop/src/app/window-manager/mvd-window-manager/desktop/desktop.component.html
@@ -9,7 +9,7 @@
   
   Copyright Contributors to the Zowe Project.
 -->
-
+<include-external-css></include-external-css>
 <ng-container *ngIf="contextMenuDef != null">
   <com-rs-mvd-context-menu [xPos]="contextMenuDef.xPos" [yPos]="contextMenuDef.yPos" [menuItems]="contextMenuDef.items" (complete)="closeContextMenu()"></com-rs-mvd-context-menu>
 </ng-container>
