--- a/virtual-desktop/src/app/window-manager/mvd-window-manager/personalization-panel/personalization-panel.component.css
+++ b/virtual-desktop/src/app/window-manager/mvd-window-manager/personalization-panel/personalization-panel.component.css
@@ -40,7 +40,7 @@
 }
 
 .panel-item-password{
-  background-image: url('/ZLUX/plugins/org.zowe.zlux.ng2desktop/web/assets/images/login/password-reset.png');
+  background-image: url('assets/images/login/password-reset.png');
   background-size: contain;
 }
 
