--- a/virtual-desktop/src/app/window-manager/simple-window-manager/simple.component.html
+++ b/virtual-desktop/src/app/window-manager/simple-window-manager/simple.component.html
@@ -9,7 +9,7 @@
   
   Copyright Contributors to the Zowe Project.
 -->
-
+<include-external-css></include-external-css>
 <div class="degenerate-container">
   <h1 style="text-align:center" *ngIf="error.length > 0">
     {{error}}
