--- a/virtual-desktop/src/app/authentication-manager/login/login.component.css
+++ b/virtual-desktop/src/app/authentication-manager/login/login.component.css
@@ -1,5 +1,3 @@
-
-
 /*
   This program and the accompanying materials are
   made available under the terms of the Eclipse Public License v2.0 which accompanies
@@ -22,19 +20,21 @@
 .login-overlay {
   width: 450px;
   position: fixed;
-  top: 0; bottom: 0;
-  left: 0; right: 0;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
   margin: 0 auto;
 
   text-align: center;
   background: white;
-  
+
   display: flex;
   flex-direction: column;
   justify-content: center;
 }
 
-.login-overlay > div {
+.login-overlay>div {
   background: white;
   overflow-x: hidden;
   max-height: fit-content;
@@ -49,7 +49,7 @@
   height: 100%;
   top: 0;
   left: 0;
-  background: url("/ZLUX/plugins/org.zowe.zlux.ng2desktop/web/assets/images/background.jpg") no-repeat center/cover;
+  background: url("assets/images/background.jpg") no-repeat center/cover;
 }
 
 .login-panel.hidden {
@@ -119,22 +119,22 @@
   display: inline-block;
   width: 76px;
   height: 76px;
-  background-image: url('/ZLUX/plugins/org.zowe.zlux.ng2desktop/web/assets/images/login/login-btn-normal.png');
+  background-image: url('assets/images/login/login-btn-normal.png');
   background-position: center center;
   background-repeat: no-repeat;
 }
 
-.login-button > .login-button-icon:hover {
-  background-image: url('/ZLUX/plugins/org.zowe.zlux.ng2desktop/web/assets/images/login/login-btn-hover.png');
+.login-button>.login-button-icon:hover {
+  background-image: url('assets/images/login/login-btn-hover.png');
 }
 
-.login-button > .login-button-icon:active {
-  background-image: url('/ZLUX/plugins/org.zowe.zlux.ng2desktop/web/assets/images/login/login-btn-pressed.png');
+.login-button>.login-button-icon:active {
+  background-image: url('assets/images/login/login-btn-pressed.png');
 }
 
 .login-button:disabled {
   opacity: 0.3;
-  filter: grayscale(100%); 
+  filter: grayscale(100%);
 }
 
 .login-label {
@@ -210,7 +210,7 @@
 }
 
 .back-button:hover {
-  color:black;
+  color: black;
 }
 
 /*
@@ -222,4 +222,3 @@
   
   Copyright Contributors to the Zowe Project.
 */
-
