--- a/virtual-desktop/src/app/window-manager/mvd-window-manager/window/window.component.css
+++ b/virtual-desktop/src/app/window-manager/mvd-window-manager/window/window.component.css
@@ -140,74 +140,74 @@
 
 .maximize-button {
   left: 73px;
-  background-image: url("/ZLUX/plugins/org.zowe.zlux.ng2desktop/web/assets/images/window/expand-inactive.png");
+  background-image: url("assets/images/window/expand-inactive.png");
 }
 
 .maximize-button.maximized {
   left: 73px;
-  background-image: url("/ZLUX/plugins/org.zowe.zlux.ng2desktop/web/assets/images/window/expanded-inactive.png");
+  background-image: url("assets/images/window/expanded-inactive.png");
 }
 
 .minimize-button {
   left: 42px;
-  background-image: url("/ZLUX/plugins/org.zowe.zlux.ng2desktop/web/assets/images/window/minimize-inactive.png");
+  background-image: url("assets/images/window/minimize-inactive.png");
 }
 
 .close-button {
   left: 12px;
-  background-image: url("/ZLUX/plugins/org.zowe.zlux.ng2desktop/web/assets/images/window/close-inactive.png");
+  background-image: url("assets/images/window/close-inactive.png");
 }
 
 .maximize-button.active:hover {
-  background-image: url("/ZLUX/plugins/org.zowe.zlux.ng2desktop/web/assets/images/window/expand-hover-active.png");
+  background-image: url("assets/images/window/expand-hover-active.png");
 }
 
 .maximize-button.maximized.active:hover {
-  background-image: url("/ZLUX/plugins/org.zowe.zlux.ng2desktop/web/assets/images/window/expanded-hover-active.png");
+  background-image: url("assets/images/window/expanded-hover-active.png");
 }
 
 .minimize-button.active:hover {
-  background-image: url("/ZLUX/plugins/org.zowe.zlux.ng2desktop/web/assets/images/window/minimize-hover-active.png");
+  background-image: url("assets/images/window/minimize-hover-active.png");
 }
 
 .close-button.active:hover {
-  background-image: url("/ZLUX/plugins/org.zowe.zlux.ng2desktop/web/assets/images/window/close-hover-active.png");
+  background-image: url("assets/images/window/close-hover-active.png");
 }
 
 .maximize-button.active {
-  background-image: url("/ZLUX/plugins/org.zowe.zlux.ng2desktop/web/assets/images/window/expand-active.png");
+  background-image: url("assets/images/window/expand-active.png");
 }
 
 .maximize-button.maximized.active {
-  background-image: url("/ZLUX/plugins/org.zowe.zlux.ng2desktop/web/assets/images/window/expanded-active.png");
+  background-image: url("assets/images/window/expanded-active.png");
 }
 
 .minimize-button.active {
-  background-image: url("/ZLUX/plugins/org.zowe.zlux.ng2desktop/web/assets/images/window/minimize-active.png");
+  background-image: url("assets/images/window/minimize-active.png");
 }
 
 .close-button.active {
-  background-image: url("/ZLUX/plugins/org.zowe.zlux.ng2desktop/web/assets/images/window/close-active.png");
+  background-image: url("assets/images/window/close-active.png");
 }
 
 .close-button.active:active {
-  background-image: url("/ZLUX/plugins/org.zowe.zlux.ng2desktop/web/assets/images/window/close-pressed.png");
+  background-image: url("assets/images/window/close-pressed.png");
 }
 
 .maximize-button.active:active {
-  background-image: url("/ZLUX/plugins/org.zowe.zlux.ng2desktop/web/assets/images/window/expand-pressed.png");
+  background-image: url("assets/images/window/expand-pressed.png");
 }
 
 .maximize-button.maximized.active:active {
-  background-image: url("/ZLUX/plugins/org.zowe.zlux.ng2desktop/web/assets/images/window/expanded-pressed.png");
+  background-image: url("assets/images/window/expanded-pressed.png");
 }
 
 .minimize-button.active:active {
-  background-image: url("/ZLUX/plugins/org.zowe.zlux.ng2desktop/web/assets/images/window/minimize-pressed.png");
+  background-image: url("assets/images/window/minimize-pressed.png");
 }
 
 .close-button.active:active {
-  background-image: url("/ZLUX/plugins/org.zowe.zlux.ng2desktop/web/assets/images/window/close-pressed.png");
+  background-image: url("assets/images/window/close-pressed.png");
 }
 
 .grip-n,
