--- a/virtual-desktop/src/styles.css
+++ b/virtual-desktop/src/styles.css
@@ -8,19 +8,7 @@
   Copyright Contributors to the Zowe Project.
 */
 
-/* 
- * This file loads external, non-component style sheets needed for the desktop.
- * 
- * If a stylesheet is being loaded from an npm module, preface the URL with a
- * tilde (~) to inform the css-loader. 
- */
-
-/* @import url('~typeface-roboto/index.css');
-@import url('~bootstrap/dist/css/bootstrap.min.css');
-@import url('~font-awesome/css/font-awesome.min.css');
-@import url('./assets/css/desktop.css'); */
-
-/* .cdk-visually-hidden {
+.cdk-visually-hidden {
   border: 0;
   clip: rect(0 0 0 0);
   height: 1px;
@@ -95,19 +83,17 @@
   position: fixed;
   width: 100%;
   overflow-y: scroll
-} */
+}
 
-/* ::selection { */
-  /* WebKit/Blink Browsers */
-  /* background: grey; */
-  /* color: white; */
-/* } */
+::selection {
+  background: grey;
+  color: white;
+}
 
-/* ::-moz-selection { */
-  /* Gecko Browsers */
-  /* background: grey; */
-  /* color: white; */
-/* } */
+::-moz-selection {
+  background: grey;
+  color: white;
+}
 
 /*
   This program and the accompanying materials are
