--- a/system-apps/app-prop-viewer/webClient/src/app/app.component.html
+++ b/system-apps/app-prop-viewer/webClient/src/app/app.component.html
@@ -8,11 +8,14 @@
   
   Copyright Contributors to the Zowe Project.
 -->
-<div class="viewer" *ngIf=isViewerWindow>
+@if(isViewerWindow){
+<div class="viewer">
   TO VIEW ALL INSTALLED APPs
 </div>
+}
 
-<div class="window" *ngIf=isPropertyWindow>
+@if(isPropertyWindow){
+<div class="window">
   
   <!-- Window body -->
   
@@ -39,6 +42,7 @@
        {{copyright}}
       </p>
 </div>
+}
 <!-- 
   This program and the accompanying materials are
   made available under the terms of the Eclipse Public License v2.0 which accompanies
