--- a/virtual-desktop/src/app/window-manager/mvd-window-manager/launchbar/launchbar-menu/launchbar-menu.component.css
+++ b/virtual-desktop/src/app/window-manager/mvd-window-manager/launchbar/launchbar-menu/launchbar-menu.component.css
@@ -14,7 +14,7 @@
   margin-left: 5px;
   margin-right: 5px;
   padding: 0;
-  background-image: url("../../../../../assets/images/launchbar/menu-zowe-icon.png");
+  background-image: url("assets/images/launchbar/menu-zowe-icon.png");
 }
 
 .app-label {
