--- a/virtual-desktop/src/app/window-manager/mvd-window-manager/window-pane/window-pane.component.css
+++ b/virtual-desktop/src/app/window-manager/mvd-window-manager/window-pane/window-pane.component.css
@@ -17,7 +17,7 @@
   left: 0;
   top: 0;
   display: flex;
-  background: url(../../../../assets/images/background.jpg) no-repeat center/cover;
+  background: url("assets/images/background.jpg") no-repeat center/cover;
 }
 
 /*
